made updates to the autocomplete inputs

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,6 @@
         <autocomplete-single
           id="aci1"
           label-size="sm"
-          required
-          validation
-          validation-message="Please fill in"
           input-id="ac-single1"
           label="Autocomplete Single"
         ></autocomplete-single>
@@ -32,7 +29,7 @@
         <autocomplete-single
           id="aci2"
           input-id="ac-single2"
-          form-layout="horizontal"
+          form-layout="inline"
           label-size="sm"
           label="Autocomplete Single"
           size="sm"
@@ -45,12 +42,9 @@
           id="aci3"
           input-id="ac-1"
           label="Autocomplete Multiselect"
-          label-size="lg"
-          form-layout="horizontal"
-          label-col="6"
-          input-col="6"
+          label-size="sm"
+          form-layout="inline"
           required
-          size="lg"
           validation
           validation-message="Please fill in"
           placeholder="Type to search..."
