--- a/src/index.html
+++ b/src/index.html
@@ -1303,7 +1303,7 @@
           </table-component>
         </section> -->
 
-        <!-- <section class="display-box-demo">
+        <section class="display-box-demo">
           <button class="reset-sort-icon" onclick="resetTableSort('table99', 'filterByItems-table99')"></button>
           <div style="display: flex; width: 100%; flex: 1 1 auto">
             <div style="flex: 1 1 auto">
@@ -1360,7 +1360,7 @@
             go-to-buttons="text"
           >
           </table-component>
-        </section> -->
+        </section>
       <!-- </div> -->
 
       <div class="cwrapper">
